--- a/clara-gemma/src/App.css
+++ b/clara-gemma/src/App.css
@@ -11,8 +11,9 @@
 /* Colors */
 :root {
   --primary-background-color: #222222;
+  --second-background-color: #272727;
   --primary-text-color: #eeeeee;
-  --success-color: #28a745;
+  --second-text-color: #111111;
   --danger-color: #dc3545;
   --warning-color: #ffc107;
   --info-color: #17a2b8;
