--- a/clara-gemma/src/App.css
+++ b/clara-gemma/src/App.css
@@ -1,5 +1,6 @@
 /* Text Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
 
 /* Reset CSS */
 * {
@@ -10,10 +11,10 @@
 
 /* Colors */
 :root {
-  --primary-background-color: #222222;
+  --primary-background-color: #f8f9f0;
   --second-background-color: #272727;
-  --primary-text-color: #eeeeee;
-  --second-text-color: #111111;
+  --primary-text-color: #222222;
+  --second-text-color: #f8f9f0;
   --danger-color: #dc3545;
   --warning-color: #ffc107;
   --info-color: #17a2b8;
